zellij-integration-tests/tests/snapshots/title_frame_mouse__mouse_click_floating_ribbon_in_status_bar_opens_a_floating_pane.snap
---
source: zellij-integration-tests/tests/title_frame_mouse.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
$
                                                ┌ Pane #2 ─────────────────────────────────────────────────────────────────────────── PIN [ ] ┐
                                                │$ █                                                                                          │
                                                │                                                                                             │
                                                │                                                                                             │
                                                │                                                                                             │
                                                │                                                                                             │
                                                │                                                                                             │
                                                │                                                                                             │
                                                │                                                                                             │
                                                │                                                                                             │
                                                └─────────────────────────────────────────────────────────────────────────────────────────────┘
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT                                          Alt +  <n> New Pane  <f> Floating  
