zellij-integration-tests/tests/snapshots/title_frame_mouse__mouse_click_new_pane_in_status_bar_opens_a_new_pane.snap
---
source: zellij-integration-tests/tests/title_frame_mouse.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                            Pane #1                                           │                                            Pane #2
$                                                                                             │opened from the status bar█
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
                                                                                              │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT    Alt +  <n> New Pane  <←↓↑→> Change Focus  <+-> Resize  <f> Floating 
