zellij-integration-tests/tests/snapshots/title_frame_mouse__mouse_click_new_tab_button_in_tab_bar_opens_a_new_tab.snap
---
source: zellij-integration-tests/tests/title_frame_mouse.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  Tab #2  + 
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
